fix -> grid alignment in hobbies grid / removed template style in experience view

--- a/src/App.css
+++ b/src/App.css
@@ -391,7 +391,6 @@ a:visited {
   #hobbies-grid {
     grid-template-columns: repeat(1, 1fr) !important;
     justify-content: center;
-    align-items: center;
     gap: 3rem !important;
   }
 
